fixing box-header layout issue with public website

--- a/app/assets/stylesheets/your_platform/new_box.sass
+++ b/app/assets/stylesheets/your_platform/new_box.sass
@@ -15,6 +15,7 @@
     > .box_image
       overflow: hidden
       border-radius: 3px
+      flex-basis: 100%
 
     > .box_image.empty
       margin: 0
